--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS 03</title>
-    <script src="./js/terenary.js" defer></script>
+    <script src="./js/forLoop.js" defer></script>
   </head>
   <body>
     <h1>JS 03</h1>
